k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend   
spec:
  selector:
    app: frontend  
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080      
  type: NodePort
